--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev-https": "next dev --experimental-https"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
